GNOME Bugzilla – Bug 691006
empathy-CRITICAL **: empathy_contact_dup_from_tp_contact: assertion `TP_IS_CONTACT (tp_contact)' failed
Last modified: 2013-01-08 11:38:25 UTC
I was connecting/disconnecting some accounts and got this crash. (lt-empathy:8343): empathy-CRITICAL **: empathy_contact_dup_from_tp_contact: assertion `TP_IS_CONTACT (tp_contact)' failed
+ Trace 231334
retval = <optimized out> __PRETTY_FUNCTION__ = "main"
Created attachment 232962 [details] [review] tp-chat: prepare CONNECTED on the TpConnection first We have to make sure that tp_connection_get_self_contact() won't return NULL.
+1
Attachment 232962 [details] pushed as d95a09b - tp-chat: prepare CONNECTED on the TpConnection first
Fixed in 3.6 as well.