tp-chat: prepare CONNECTED on the TpConnection first

We have to make sure that tp_connection_get_self_contact() won't return NULL.

https://bugzilla.gnome.org/show_bug.cgi?id=691006